--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -109,6 +109,8 @@
     <Compile Include="DbGeneric\RepoCommon.cs" />
     <Compile Include="DbGeneric\RepoGeneric2.cs" />
     <Compile Include="DbUtil\FiConnConfig.cs" />
+    <Compile Include="DbUtil\IFiDbConnFactory.cs" />
+    <Compile Include="DbUtil\FiDbConnFactoryByConf.cs" />
     <Compile Include="DbUtil\FiMetaEntity.cs" />
     <Compile Include="DbUtil\FiQueryGenMs.cs" />
     <Compile Include="DbUtil\FiQueryTools.cs" />
