--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -185,5 +185,8 @@
       <Version>0.8.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util\collection\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
