--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -141,6 +141,8 @@
     <Compile Include="UtilThirdParty\ShortGuid.cs" />
     <Compile Include="UtilThirdParty\TextHelper.cs" />
     <Compile Include="Util\Collection\ListFkb.cs" />
+    <Compile Include="Util\ColStruct\FiColList.cs" />
+    <Compile Include="Util\ColStruct\IFiTableMeta.cs" />
     <Compile Include="Util\core\FiBoolean.cs" />
     <Compile Include="Util\core\FiCalender.cs" />
     <Compile Include="Util\config\FiAppConfig.cs" />
