--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -137,6 +137,7 @@
     <Compile Include="DemoEntity\DemoMkfields.cs" />
     <Compile Include="DemoEntity\MysqlQueryDemo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilRequest\FiRequest.cs" />
     <Compile Include="UtilThirdParty\ShortGuid.cs" />
     <Compile Include="UtilThirdParty\TextHelper.cs" />
     <Compile Include="Util\Collection\ListFkb.cs" />
