--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -135,6 +135,7 @@
     <Compile Include="DbUtil\FiMsQuery.cs" />
     <Compile Include="DemoEntity\DemoMkfields.cs" />
     <Compile Include="DemoEntity\MysqlQueryDemo.cs" />
+    <Compile Include="MvcPattern\AbsModal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UtilRequest\FiRequest.cs" />
     <Compile Include="UtilThirdParty\ShortGuid.cs" />
@@ -142,8 +143,8 @@
     <Compile Include="Util\Collection\ListFkb.cs" />
     <Compile Include="Util\ColStruct\FiColList.cs" />
     <Compile Include="Util\ColStruct\IFiTableMeta.cs" />
-    <Compile Include="Util\config\IConfigManager.cs" />
-    <Compile Include="Util\config\ILogManager.cs" />
+    <Compile Include="Util\config\IFiConfigManager.cs" />
+    <Compile Include="Util\config\IFiLogManager.cs" />
     <Compile Include="Util\core\FiBoolean.cs" />
     <Compile Include="Util\core\FiCalender.cs" />
     <Compile Include="Util\config\FiAppConfig.cs" />
