--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -141,6 +141,8 @@
     <Compile Include="UtilRequest\FiRequest.cs" />
     <Compile Include="UtilThirdParty\ShortGuid.cs" />
     <Compile Include="UtilThirdParty\TextHelper.cs" />
+    <Compile Include="UtilXml\FiSoap.cs" />
+    <Compile Include="UtilXml\FiSoap2.cs" />
     <Compile Include="Util\Collection\ListFkb.cs" />
     <Compile Include="Util\ColStruct\FiColList.cs" />
     <Compile Include="Util\ColStruct\IFiTableMeta.cs" />
