--- a/OrakYazilimLib.csproj
+++ b/OrakYazilimLib.csproj
@@ -91,7 +91,7 @@
   <ItemGroup>
     <Compile Include="AdoNetHelper\Abstract\IDbOperations.cs" />
     <Compile Include="AdoNetHelper\FiSqLite.cs" />
-    <Compile Include="AdoNetHelper\FiMssql.cs" />
+    <Compile Include="AdoNetHelper\FiMssqlSoc.cs" />
     <Compile Include="AdoNetHelper\FiSqlUtil.cs" />
     <Compile Include="AdoNetHelper\ParamItem.cs" />
     <Compile Include="AdoNetHelper\DbCreateHelper.cs" />
